# wikilite-test

./: .gitignore  .goreleaser.yml  API.md  CMakeLists.txt  Dockerfile  Makefile  README.md  ai.go  db.go  db_core.go  db_process.go  db_search.go  docker-compose.yml  go.mod  go.sum  main.go  misc.go  qdrant.go  search.go  setup.go  sqlite.go  types.go  utils.go  web.go  wiki.go
.github/workflows/: release.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/termux/terminal/: JNI.kt
android/app/src/main/java/it/eja/wikilite/: DatabaseDownloadActivity.kt  DatabaseFileAdapter.kt  DownloadDialog.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_database_download.xml  activity_main.xml  dialog_download.xml  item_database_file.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/: ai.go  ai_external.go  ai_internal.go  ai_local_off.go  ai_local_on.go  auto.go  db.go  db_core.go  db_model.go  db_process.go  db_search.go  distance.go  main.go  search.go  setup.go  types.go  utils.go  web.go  wiki.go
app/assets/static/: index.html  setup.html
app/assets/static/js/: article.js  audio.js  globals.js  main.js  wikilite.js
app/assets/templates/: article.html  head.html  search.html
assets/static/: index.html  script.js  setup.html  tts.html
assets/static/js/: article.js  audio.js  globals.js  main.js  search.js
assets/templates/: article.html  foot.html  head.html  search.html
scripts/: start.bat  start.command  termux-build.sh
src/: llama_cpp.patch  llama_embeddings.cpp  llama_embeddings.h
templates/: article.html  search.html
